<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/mainTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/mainTitle"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/sessionCategoryText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/category"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mainTitle" />

    <TextView
        android:id="@+id/startTextView"
        android:layout_width="45dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:text="@string/from"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/endTime"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sessionCategoryText"
        app:layout_constraintVertical_bias="0.557" />

    <EditText
        android:id="@+id/startTime"
        android:layout_width="150dp"
        android:layout_height="45dp"
        android:layout_marginStart="25dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/timeHint"
        android:inputType="textPersonName"
        app:layout_constraintStart_toEndOf="@+id/startTextView"
        app:layout_constraintTop_toBottomOf="@+id/sessionCategoryText" />

    <Button
        android:id="@+id/startTimePeriod"
        android:layout_width="100dp"
        android:layout_height="45dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:text="@string/period"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/startTime"
        app:layout_constraintTop_toBottomOf="@+id/sessionCategoryText" />

    <TextView
        android:id="@+id/endTextView"
        android:layout_width="45dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="28dp"
        android:text="@string/to"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/startTime" />

    <EditText
        android:id="@+id/endTime"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_marginStart="25dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/timeHint"
        android:inputType="textPersonName"
        app:layout_constraintStart_toEndOf="@+id/endTextView"
        app:layout_constraintTop_toBottomOf="@+id/startTime" />

    <Button
        android:id="@+id/endTimePeriod"
        android:layout_width="100dp"
        android:layout_height="45dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:text="@string/period"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/endTime"
        app:layout_constraintTop_toBottomOf="@+id/startTimePeriod" />

    <Button
        android:id="@+id/addButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/add"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/endTime" />


    <TextView
        android:id="@+id/listView"
        android:layout_width="200dp"
        android:layout_height="250dp"
        android:layout_marginTop="64dp"
        android:layout_marginBottom="16dp"
        android:text="@string/list"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addButton" />


</androidx.constraintlayout.widget.ConstraintLayout>